--- a/FinalProject/src/UserInterface/RepresentativeRole/RepresentativeLoanCaseJPanel.form
+++ b/FinalProject/src/UserInterface/RepresentativeRole/RepresentativeLoanCaseJPanel.form
@@ -94,18 +94,23 @@
                                               </Group>
                                           </Group>
                                           <Component id="jLabel7" alignment="1" min="-2" pref="292" max="-2" attributes="0"/>
-                                          <Component id="jLabel15" alignment="1" min="-2" pref="292" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="lblLength" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblBorrower" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblCategory" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblMonthlyInstallment" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblStartMonth" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblStartYear" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblFieldPartner" alignment="0" pref="123" max="32767" attributes="0"/>
-                                          <Component id="lblAmount" alignment="0" pref="123" max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="lblLength" alignment="0" pref="123" max="32767" attributes="0"/>
+                                                  <Component id="lblBorrower" alignment="0" pref="123" max="32767" attributes="0"/>
+                                                  <Component id="lblCategory" alignment="0" pref="123" max="32767" attributes="0"/>
+                                                  <Component id="lblMonthlyInstallment" alignment="0" pref="123" max="32767" attributes="0"/>
+                                                  <Component id="lblStartMonth" alignment="0" pref="123" max="32767" attributes="0"/>
+                                                  <Component id="lblStartYear" alignment="0" pref="123" max="32767" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="lblAmount" min="-2" pref="123" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
                                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
@@ -152,7 +157,7 @@
                       <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabel3" min="-2" pref="36" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -184,12 +189,7 @@
                                   <Component id="jLabel8" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                                   <Component id="lblStartYear" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jLabel15" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                                  <Component id="lblFieldPartner" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel17" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                                   <Component id="lblAmount" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
@@ -199,7 +199,7 @@
                               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" pref="24" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" max="32767" attributes="0"/>
+                              <Component id="jScrollPane1" min="-2" pref="211" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="285" max="32767" attributes="0"/>
@@ -253,7 +253,7 @@
                           <Component id="btnSendToTrustee" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                           <Component id="btnBack" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="147" max="32767" attributes="0"/>
+                      <EmptySpace pref="149" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -774,37 +774,6 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewActionPerformed"/>
               </Events>
-            </Component>
-            <Component class="javax.swing.JLabel" name="jLabel15">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Lucida Grande" size="14" style="1"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="horizontalAlignment" type="int" value="11"/>
-                <Property name="text" type="java.lang.String" value="FIELD PARTNER CONTACT "/>
-                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                  <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                    <LineBorder roundedCorners="true" thickness="3">
-                      <Color PropertyName="color" blue="ff" green="ff" red="ff" type="rgb"/>
-                    </LineBorder>
-                  </Border>
-                </Property>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="lblFieldPartner">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Lucida Grande" size="18" style="1"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="label"/>
-              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblBorrowerHistory1">
               <Properties>
